--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -64,6 +64,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/ueditordirective.js"></script>
+        <script src="scripts/services/postservice.js"></script>
+        <script src="scripts/filters/postfilter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
