--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -21,20 +21,23 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">ngblog</h3>
-      </div>
 
       <div ng-view=""></div>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
+
+    </div>
+    <div class="footer">
+      <p class="footer-link">
+        <a>广告刊例</a>
+        <a>免责声明</a>
+        <a>友情链接</a>
+        <a>联系方式</a>
+        <a>学壹传媒</a>
+        <a>意见反馈</a>
+        <a>官方微博</a>
+        <a>壹大学交流群</a>
+      </p>
+      <p class="footer-inf">Copyright @ 2014 学壹传媒 学壹高校传媒联盟 Powered by</p>
     </div>
 
 
