--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -22,7 +22,8 @@
     <!-- Add your site or application content here -->
     <div class="container">
 
-      <div ng-view=""></div>
+      <div ng-view="">
+      </div>
 
 
     </div>
