--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -38,7 +38,7 @@
         <a>官方微博</a>
         <a>壹大学交流群</a>
       </p>
-      <p class="footer-inf">Copyright @ 2014 学壹传媒 学壹高校传媒联盟 Powered by</p>
+      <p class="footer-inf">Copyright @ 2014 学壹传媒 学壹高校传媒联盟 Powered by <a href="http://rubyonrails.org/">Rails</a> and <a href="https://angularjs.org/">Angular</a></p>
     </div>
 
 
