--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container-fluid">
+    <div class="container">
 
       <div ng-view="">
       </div>
@@ -71,11 +71,13 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/posts.js"></script>
+        <script src="scripts/controllers/admin_posts.js"></script>
         <script src="scripts/controllers/post_new.js"></script>
         <script src="scripts/controllers/post_edit.js"></script>
-        <script src="scripts/directives/ueditordirective.js"></script>
-        <script src="scripts/services/postservice.js"></script>
-        <script src="scripts/filters/postfilter.js"></script>
+        <script src="scripts/controllers/post_show.js"></script>
+        <script src="scripts/directives/ueditor_directive.js"></script>
+        <script src="scripts/services/posts_service.js"></script>
+        <script src="scripts/filters/posts_filter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
