--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -80,7 +80,7 @@
         <script src="scripts/controllers/post_edit.js"></script>
         <script src="scripts/controllers/post_show.js"></script>
         <script src="scripts/directives/ueditor_directive.js"></script>
-        <script src="scripts/directives/ace_markdown_directive.js"></script>
+        <!--<script src="scripts/directives/ace_markdown_directive.js"></script>-->
         <script src="scripts/services/posts_service.js"></script>
         <script src="scripts/filters/posts_filter.js"></script>
         <!-- endbuild -->
