added search to index.html and show_post.html and posts.html
添加搜索功能

--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/controllers/post_new.js"></script>
         <script src="scripts/controllers/post_edit.js"></script>
         <script src="scripts/controllers/post_show.js"></script>
+        <script src="scripts/controllers/search_posts.js"></script>
         <script src="scripts/directives/ueditor_directive.js"></script>
         <script src="scripts/directives/ace_markdown_directive.js"></script>
         <script src="scripts/services/posts_service.js"></script>
