--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -81,6 +81,7 @@
         <script src="scripts/controllers/post_show.js"></script>
         <script src="scripts/controllers/search_posts.js"></script>
         <script src="scripts/directives/ueditor_directive.js"></script>
+        <script src="scripts/directives/keyenter_directive.js"></script>
         <script src="scripts/directives/ace_markdown_directive.js"></script>
         <script src="scripts/services/posts_service.js"></script>
         <script src="scripts/filters/posts_filter.js"></script>
