Add login and footer.html.

--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -23,26 +23,9 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-
       <div ng-view="">
       </div>
-
-
     </div>
-    <div class="footer">
-      <p class="footer-link">
-        <a>广告刊例</a>
-        <a>免责声明</a>
-        <a>友情链接</a>
-        <a>联系方式</a>
-        <a>学壹传媒</a>
-        <a>意见反馈</a>
-        <a>官方微博</a>
-        <a>壹大学交流群</a>
-      </p>
-      <p class="footer-inf">Copyright @ 2014 学壹传媒 学壹高校传媒联盟 Powered by <a href="http://rubyonrails.org/">Rails</a> and <a href="https://angularjs.org/">Angular</a></p>
-    </div>
-
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
@@ -80,6 +63,7 @@
         <script src="scripts/controllers/post_edit.js"></script>
         <script src="scripts/controllers/post_show.js"></script>
         <script src="scripts/controllers/search_posts.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <script src="scripts/directives/ueditor_directive.js"></script>
         <script src="scripts/directives/keyenter_directive.js"></script>
         <script src="scripts/directives/ace_markdown_directive.js"></script>
