Fix login page and login logical.

--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/directives/keyenter_directive.js"></script>
         <script src="scripts/directives/ace_markdown_directive.js"></script>
         <script src="scripts/services/posts_service.js"></script>
+        <script src="scripts/services/auth_service.js"></script>
         <script src="scripts/filters/posts_filter.js"></script>
         <!-- endbuild -->
 </body>
