--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -69,7 +69,9 @@
         <script src="scripts/directives/keyenter_directive.js"></script>
         <script src="scripts/directives/ace_markdown_directive.js"></script>
         <script src="scripts/services/posts_service.js"></script>
+        <script src="scripts/services/session_service.js"></script>
         <script src="scripts/services/auth_service.js"></script>
+        <script src="scripts/services/session_injector.js"></script>
         <script src="scripts/filters/posts_filter.js"></script>
         <!-- endbuild -->
 </body>
