Add localForage for store token.

--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -51,6 +51,8 @@
     <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
     <script src="bower_components/marked/lib/marked.js"></script>
     <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/localforage/dist/localforage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
