--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -53,6 +53,7 @@
     <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/localforage/dist/localforage.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
