--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/controllers/post_edit.js"></script>
         <script src="scripts/controllers/post_show.js"></script>
         <script src="scripts/controllers/search_posts.js"></script>
+        <script src="scripts/controllers/admin_index.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/directives/ueditor_directive.js"></script>
         <script src="scripts/directives/keyenter_directive.js"></script>
