--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -51,6 +51,7 @@
     <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/browser-detector/detect-browser.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
