--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/services/posts_service.js"></script>
         <script src="scripts/services/session_service.js"></script>
         <script src="scripts/services/auth_service.js"></script>
+        <script src="scripts/services/admin_nav_service.js"></script>
         <script src="scripts/services/session_injector.js"></script>
         <script src="scripts/filters/posts_filter.js"></script>
         <!-- endbuild -->
