--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,5 @@
-<!doctype html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title>ngblog</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-  </head>
-
-  <body>
-    <div class="dialog">
-      <a href="/api">API</a>
-    </div>
-  </body>
-</html>
+<!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title>ngblog</title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.d7bc58b0.css"> <link rel="stylesheet" href="styles/main.41ffcbee.css">  <body ng-app="ngblogApp"> <!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]--> <!-- Add your site or application content here --> <div class="container"> <div ng-view=""> </div> </div> <!--[if lt IE 9]>
+    <script src="scripts/oldieshim.fa8ddb71.js"></script>
+    <![endif]--> <script src="scripts/vendor.25dc07bb.js"></script> <script src="scripts/scripts.d81d650a.js"></script>  
