--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -15,6 +15,8 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <base href="/">
   </head>
   <body ng-app="ngblogApp">
     <!--[if lt IE 7]>
