--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
+    <link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -54,6 +55,8 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/browser-detector/detect-browser.js"></script>
+    <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+    <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -73,12 +76,14 @@
         <script src="scripts/directives/ace_markdown_directive.js"></script>
         <script src="scripts/directives/breadcrumbs_directive.js"></script>
         <script src="scripts/directives/admin_nav_directive.js"></script>
+        <script src="scripts/directives/disanimate_directive.js"></script>
         <script src="scripts/services/posts_service.js"></script>
         <script src="scripts/services/session_service.js"></script>
         <script src="scripts/services/auth_service.js"></script>
         <script src="scripts/services/admin_nav_service.js"></script>
         <script src="scripts/services/session_injector.js"></script>
         <script src="scripts/filters/posts_filter.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
