--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -71,6 +71,9 @@
         <script src="scripts/controllers/post_show.js"></script>
         <script src="scripts/controllers/search_posts.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/users_new.js"></script>
+        <script src="scripts/controllers/admin_users.js"></script>
+        <script src="scripts/controllers/user_edit.js"></script>
         <script src="scripts/directives/ueditor_directive.js"></script>
         <script src="scripts/directives/keyenter_directive.js"></script>
         <script src="scripts/directives/ace_markdown_directive.js"></script>
@@ -81,6 +84,7 @@
         <script src="scripts/services/session_service.js"></script>
         <script src="scripts/services/auth_service.js"></script>
         <script src="scripts/services/admin_nav_service.js"></script>
+        <script src="scripts/services/users_service.js"></script>
         <script src="scripts/services/session_injector.js"></script>
         <script src="scripts/filters/posts_filter.js"></script>
 
