--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -74,6 +74,8 @@
         <script src="scripts/controllers/users_new.js"></script>
         <script src="scripts/controllers/admin_users.js"></script>
         <script src="scripts/controllers/user_info.js"></script>
+        <script src="scripts/controllers/password_update.js"></script>
+        <script src="scripts/controllers/avatar_update.js"></script>
         <script src="scripts/directives/ueditor_directive.js"></script>
         <script src="scripts/directives/keyenter_directive.js"></script>
         <script src="scripts/directives/ace_markdown_directive.js"></script>
