fixed markdown bug and loading image bug
修复了markdown 内容解析bug和文章太少loading image bug

--- a/ngblog/app/index.html
+++ b/ngblog/app/index.html
@@ -18,6 +18,10 @@
     <!-- endbuild -->
 
     <base href="/">
+    <script src="/vendor/marked.js"></script>
+    <link rel="stylesheet" href="/vendor/highlight/styles/default.css">
+    <script src="/vendor/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body ng-app="ngblogApp">
     <!--[if lt IE 7]>
