--- a/public/index.html
+++ b/public/index.html
@@ -1,99 +1,5 @@
-<!doctype html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title>学壹博客</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
-    <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
-    <link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-
-    <base href="/">
-    <script src="/vendor/marked.js"></script>
-    <link rel="stylesheet" href="/vendor/highlight/styles/default.css">
-    <script src="/vendor/highlight/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-  </head>
-  <body ng-app="ngblogApp">
-    <!--[if lt IE 7]>
+<!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title>学壹博客</title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.40408694.css"> <link rel="stylesheet" href="styles/main.48e8a8f2.css"> <base href="/"> <script src="/vendor/marked.js"></script> <link rel="stylesheet" href="/vendor/highlight/styles/default.css"> <script src="/vendor/highlight/highlight.pack.js"></script> <script>hljs.initHighlightingOnLoad();</script>  <body ng-app="ngblogApp"> <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <!-- Add your site or application content here -->
-    <div class="container">
-      <div ng-view="">
-      </div>
-    </div>
-
-    <!-- build:js(.) scripts/oldieshim.js -->
-    <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.js"></script>
-    <![endif]-->
-    <!-- endbuild -->
-
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
-    <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
-    <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
-    <script src="bower_components/browser-detector/detect-browser.js"></script>
-    <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-    <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/base.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/posts.js"></script>
-        <script src="scripts/controllers/admin_posts.js"></script>
-        <script src="scripts/controllers/post_new.js"></script>
-        <script src="scripts/controllers/post_edit.js"></script>
-        <script src="scripts/controllers/post_show.js"></script>
-        <script src="scripts/controllers/search_posts.js"></script>
-        <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/user_new.js"></script>
-        <script src="scripts/controllers/admin_users.js"></script>
-        <script src="scripts/controllers/user_info.js"></script>
-        <script src="scripts/controllers/password_update.js"></script>
-        <script src="scripts/controllers/avatar_update.js"></script>
-        <script src="scripts/directives/ueditor_directive.js"></script>
-        <script src="scripts/directives/keyenter_directive.js"></script>
-        <script src="scripts/directives/ace_markdown_directive.js"></script>
-        <script src="scripts/directives/breadcrumbs_directive.js"></script>
-        <script src="scripts/directives/admin_nav_directive.js"></script>
-        <script src="scripts/directives/disanimate_directive.js"></script>
-        <script src="scripts/services/posts_service.js"></script>
-        <script src="scripts/services/session_service.js"></script>
-        <script src="scripts/services/auth_service.js"></script>
-        <script src="scripts/services/admin_nav_service.js"></script>
-        <script src="scripts/services/users_service.js"></script>
-        <script src="scripts/services/session_injector.js"></script>
-        <script src="scripts/filters/posts_filter.js"></script>
-
-        <!-- endbuild -->
-</body>
-</html>
+    <![endif]--> <!-- Add your site or application content here --> <div class="container"> <div ng-view=""> </div> </div> <!--[if lt IE 9]>
+    <script src="scripts/oldieshim.fa8ddb71.js"></script>
+    <![endif]--> <script src="scripts/vendor.c4963ec3.js"></script> <script src="scripts/scripts.f25b9a4f.js"></script>  
